<resources>
    <string name="app_name">KubeStreaming</string>
    <string name="listTitle">Filmes</string>
    <string name="contentDescription">temporary description</string>
    <string name="imgViewPosterDesc">Movie Poster</string>
    <string name="movieTitle">"Movie title "</string>
    <string name="movieDescription">Movie description</string>
    <string name="movieRunningTime">Movie running time</string>
    <string name="backButton">Back to home screen</string>
    <string name="txtMovieDate">Movie Date</string>
    <string name="movieList1">Filmes relevantes</string>
    <string name="movielist2">Film-Noir</string>
    <string name="movieList3">Blacksploitation</string>
    <string name="movieList4">Western</string>
    <string name="movieList5">Ultima decada</string>
    <string name="watchButton">Assistir</string>
</resources>